; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_timeline.c_timeline_destroy.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_timeline.c_timeline_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeline = type { i32, %struct.demuxer*, %struct.demuxer** }
%struct.demuxer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timeline_destroy(%struct.timeline* %0) #0 {
  %2 = alloca %struct.timeline*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.demuxer*, align 8
  store %struct.timeline* %0, %struct.timeline** %2, align 8
  %5 = load %struct.timeline*, %struct.timeline** %2, align 8
  %6 = icmp ne %struct.timeline* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %38

8:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %32, %8
  %10 = load i32, i32* %3, align 4
  %11 = load %struct.timeline*, %struct.timeline** %2, align 8
  %12 = getelementptr inbounds %struct.timeline, %struct.timeline* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp slt i32 %10, %13
  br i1 %14, label %15, label %35

15:                                               ; preds = %9
  %16 = load %struct.timeline*, %struct.timeline** %2, align 8
  %17 = getelementptr inbounds %struct.timeline, %struct.timeline* %16, i32 0, i32 2
  %18 = load %struct.demuxer**, %struct.demuxer*** %17, align 8
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.demuxer*, %struct.demuxer** %18, i64 %20
  %22 = load %struct.demuxer*, %struct.demuxer** %21, align 8
  store %struct.demuxer* %22, %struct.demuxer** %4, align 8
  %23 = load %struct.demuxer*, %struct.demuxer** %4, align 8
  %24 = load %struct.timeline*, %struct.timeline** %2, align 8
  %25 = getelementptr inbounds %struct.timeline, %struct.timeline* %24, i32 0, i32 1
  %26 = load %struct.demuxer*, %struct.demuxer** %25, align 8
  %27 = icmp ne %struct.demuxer* %23, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %15
  %29 = load %struct.demuxer*, %struct.demuxer** %4, align 8
  %30 = call i32 @demux_free(%struct.demuxer* %29)
  br label %31

31:                                               ; preds = %28, %15
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %3, align 4
  br label %9

35:                                               ; preds = %9
  %36 = load %struct.timeline*, %struct.timeline** %2, align 8
  %37 = call i32 @talloc_free(%struct.timeline* %36)
  br label %38

38:                                               ; preds = %35, %7
  ret void
}

declare dso_local i32 @demux_free(%struct.demuxer*) #1

declare dso_local i32 @talloc_free(%struct.timeline*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
